2005-09-06  Alexander Larsson  <alexl@redhat.com>

	* autogen.sh:
	Require automake 1.8
	
	* libgnomevfs/Makefile.am:
	Work with 1.8
	
	* daemon/Makefile.am:
	Don't dist auto-build corba files (#315294)

2005-09-05  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Post release version bump

=== gnome-vfs 2.12.0 ===
	
2005-09-05  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Bump version to 2.12.0

	* NEWS: Update for release

2005-08-30  David Zeuthen  <davidz@redhat.com>

	* libgnomevfs/gnome-vfs-hal-mounts.c: Fix up some issues with the
	HAL backend; for details see this bug report
	http://bugzilla.gnome.org/show_bug.cgi?id=171073#c17 
	The problem is that the hal backend makes the mistake of not
	adding a drive/volume if it fails the policy checks. For instance,
	this means that the drive/volume for e.g. /home or /usr is not
	added since we don't want to show an icon for this location.  The
	correct behavior, if policy checks fails, is to still add the
	drive/volume but set the is_user_visble flag to FALSE.
	Also rework how debbugging works.

2005-08-31  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-mime-info.c:
	* libgnomevfs/gnome-vfs-mime.c:
	Wrap all remaining calls to xdg_mime with the mime lock. #170947

2005-08-29  Christian Neumair  <chris@gnome-de.org>

	* libgnomevfs/gnome-vfs-xfer.c: (copy_directory): set source/target
	URI before processing each of the copied files. Fixes #310061.

2005-08-28  Christian Kellner  <gicmo@gnome.org>

	* libgnomevfs/gnome-vfs-hal-mounts.c:
	(_gnome_vfs_hal_mounts_modify_drive),
	(_gnome_vfs_hal_mounts_modify_volume):
	Check both the listed device node and its resolved link 
	target against HAL, before adding as a new device.
	Patch from Robert Love <rml@novell.com>. Fixes bug #314490.

2005-08-29  Tor Lillqvist  <tml@novell.com>

	* gnome-vfs-zip.in: Include also documentation in the developer
	zipfile.

2005-08-24  Christian Kellner  <gicmo@gnome.org>

	* configure.in: