@@ -1,3 +1,9 @@
+2005-09-07  Christian Kellner  <gicmo@gnome.org> 
+
+	* libgnomevfs/gnome-vfs-mime.c: (file_read_binder):
+	Fix error checking logic for the fread call.
+	Pointed out by Kjartan Maraas <kmaraas@gnome.org>
+
 2005-09-06  Alexander Larsson  <alexl@redhat.com>
 
 	* autogen.sh:
